# hypermodern-python

./: .editorconfig  .flake8  .readthedocs.yml  README.md  TODO.md  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/hypermodern_guyhoozdis/: __init__.py  __main__.py  console.py
src/hypermodern_python/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
