[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "A template package based on The Hypermodern Project"
authors = ["Guy Hoozdis <GuyHoozdis@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/guyhoozdis/hypermodern-python"
repository = "https://github.com/guyhoozdis/hypermodern-python"
keywords = ["hypermodern", "template", "package"]


[tool.poetry.dependencies]
python = ">=3.8,<3.13"
click = "^8.1.7"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = {extras = ["toml"], version = "^7.5.3"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ipython = [
    {version = "^8.25.0", markers = "python_version >= '3.10' and python_version < '3.13'"},
    {version = "^7.31.1", markers = "python_version >= '3.8' and python_version < '3.10'"},
]
ipdb = "^0.13.13"


[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]


[tool.coverage.run]
branch = true
# NOTE: The tests/ are included below for demonstration purposes.  It is a verification that the tests
# modules and all of their contents are being executed as expected.
#
# TODO: Remove "tests" from source after project matures.
source = ["hypermodern_python", "tests"]


[tool.coverage.report]
show_missing = true
fail_under = 100
