[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# ======================================================================
# Package Metadata and Dependencies
# ======================================================================
[tool.poetry]
name = "hypermodern-python"
version = "0.3.0"
description = "A template package based on The Hypermodern Project"
authors = ["Guy Hoozdis <GuyHoozdis@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/guyhoozdis/hypermodern-python"
repository = "https://github.com/guyhoozdis/hypermodern-python"
keywords = ["hypermodern", "template", "package"]


[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
click = "^8.1.7"
requests = "^2.32.3"
desert = "^2022.9.22"
marshmallow = "^3.21.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = {extras = ["toml"], version = "^7.5.3"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ipython = [
    {version = "^8.25.0", markers = "python_version >= '3.10' and python_version < '3.13'"},
    {version = "^7.31.1", markers = "python_version >= '3.8' and python_version < '3.10'"},
]
ipdb = "^0.13.13"


# ======================================================================
# CLI Entrypoints
# ======================================================================
mypy = "^1.10.0"
typeguard = "^4.3.0"
flake8-annotations = "^3.1.1"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"


# ======================================================================
# Tool Configuration: coverage
# ======================================================================
[tool.coverage.paths]
source = ["src", "*/site-packages"]


[tool.coverage.run]
branch = true
source = ["hypermodern_python"]


[tool.coverage.report]
show_missing = true
fail_under = 100


# ======================================================================
# Tool Configuration: flake8
# ======================================================================
# TODO: Move configuration here once flake8 supports pyproject.toml natively.
